# MyFileHandlerForPY

./: README.md  __main__.py  pyproject.toml  requirements.txt  setup.py  test.csv
file_handler_py_package/: __init__.py  csv_handler.py  file_handler.py
file_manager_py_package/: __init__.py  csv_manager.py  directory_manager.py  file_manager.py  memory_manager.py
utils/: start_end.py
