[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_handler_py_package"
version = "0.1.0"
authors = [
    {name = "Christian Schinkel", email = "christian.schinkel@me.com"}
]
description = "A Python package for handling files and CSV operations"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["file", "handler", "csv", "file-operations"]

[project.urls]
"Homepage" = "https://github.com/ChristianSchinkel/MyFileHandlerForPY"
"Bug Tracker" = "https://github.com/ChristianSchinkel/MyFileHandlerForPY/issues"
"Source Code" = "https://github.com/ChristianSchinkel/MyFileHandlerForPY"

[tool.setuptools]
packages = ["file_handler_py_package"]
